--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -652,5 +652,13 @@
   "Overcome procrastination": "",
   "give me tips": "",
   "Help me study": "",
-  "vocabulary for a college entrance exam": ""
+  "vocabulary for a college entrance exam": "",
+  "Tell me a random fun fact about the Roman Empire": "",
+  "Explain options trading in simple terms if I'm familiar with buying and selling stocks.": "",
+  "What are 5 creative things I could do with my kids' art? I don't want to throw them away, but it's also so much clutter.": "",
+  "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "",
+  "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "",
+  "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "",
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": ""
+
 }
