--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -652,5 +652,12 @@
   "Overcome procrastination": "Supera la procrastinación",
   "give me tips": "Dame consejos",
   "Help me study": "Ayúdame a estudiar",
-  "vocabulary for a college entrance exam": "Vocabulario para un examen de ingreso a la universidad"
+  "vocabulary for a college entrance exam": "Vocabulario para un examen de ingreso a la universidad",
+  "Tell me a random fun fact about the Roman Empire": "Cuéntame un dato curioso aleatorio sobre el Imperio Romano.",
+  "Explain options trading in simple terms if I'm familiar with buying and selling stocks.": "Explica el trading de opciones en términos sencillos si estoy familiarizado con la compra y venta de acciones.",
+  "What are 5 creative things I could do with my kids' art? I don't want to throw them away, but it's also so much clutter.": "¿Cuáles son cinco cosas creativas que podría hacer con el arte de mis hijos? No quiero tirarlas, pero también es un desorden tremendo.",
+  "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "Muestrame un fragmento de código de un encabezado fijo de un sitio web en CSS y JavaScript.",
+  "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Ayúdame a estudiar vocabulario: escribe una frase para que yo rellene el espacio en blanco y trataré de elegir la opción correcta.",
+  "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Revisa la siguiente frase por gramática y claridad: '[frase]'. Reescríbela para una mejor legibilidad manteniendo su significado original.",
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "¿Podrías comenzar preguntándome sobre las ocasiones en las que más procrasino y luego darme algunos consejos para superarlo?"
 }
