--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -644,7 +644,7 @@
   "Explain options trading": "オプション取引を説明してください",
   "if I'm familiar with buying and selling stocks": "株の買い売りに慣れている場合",
   "Grammar check": "文法チェック",
-  "rewrite it for better readability": "読みやすく書き直してください",
+  "rewrite it for better readability ": "読みやすく書き直してください",
   "Tell me a fun fact": "面白い事実を教えてください",
   "about the Roman Empire": "ローマ帝国に関する",
   "Give me ideas": "アイデアを教えてください",
@@ -652,5 +652,12 @@
   "Overcome procrastination": "先延ばし癖を克服してください",
   "give me tips": "ヒントを教えてください",
   "Help me study": "勉強を手伝ってください",
-  "vocabulary for a college entrance exam": "大学入試の語彙"
+  "vocabulary for a college entrance exam": "大学入試の語彙",
+  "Tell me a random fun fact about the Roman Empire": "ローマ帝国に関するランダムな面白い事実を教えてください。",
+  "Explain options trading in simple terms if I'm familiar with buying and selling stocks.": "株の買い売りに慣れているなら、オプション取引を簡単な言葉で説明してください。",
+  "What are 5 creative things I could do with my kids' art? I don't want to throw them away, but it's also so much clutter.": "子供たちのアート作品を使ってできる 5 つの創造的なことは何でしょうか？捨てたくはないけれど、とても散らかっています。",
+  "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "CSS と JavaScript で書かれたウェブサイトの固定ヘッダーのコード断片を見せてください。",
+  "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "語彙の勉強を手伝ってください。空白を埋めるための文を書いてください。そして、私は正しい選択肢を選ぼうとします。",
+  "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "次の文の文法と明瞭さをチェックしてください。「[文]」。元の意味を保ちながら、読みやすく書き直してください。",
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "あなたは、私が最も先延ばしをする状況について尋ねてから、それを克服するためのアドバイスをくれることはできますか？"
 }
