--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -652,5 +652,12 @@
   "Overcome procrastination": "Ertelemeyi aşın",
   "give me tips": "Bana ipuçları ver",
   "Help me study": "Benim için çalışmaya yardım et",
-  "vocabulary for a college entrance exam": "Üniversite giriş sınavı için kelime hazinesi"
-  }
+  "vocabulary for a college entrance exam": "Üniversite giriş sınavı için kelime hazinesi",
+  "Tell me a random fun fact about the Roman Empire": "Bana Romalı İmparatorluğu hakkında rastgele bir eğlenceli bilgi söyle.",
+  "Explain options trading in simple terms if I'm familiar with buying and selling stocks.": "Eğer hisse senetlerini alıp satmaya aşinaım ise, opsiyon ticaretini basit terimler ile açıklayın.",
+  "What are 5 creative things I could do with my kids' art? I don't want to throw them away, but it's also so much clutter.": "Çocuklarımın sanat eserleriyle yapabileceğim 5 yaratıcı şey neler olabilir? Onları atmak istemiyorum ama çok da dağınık durumda.",
+  "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "Bana bir web sitesinin CSS ve JavaScript ile yazılmış sabit başlığının bir kod parçacığını göster.",
+  "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Kelime hazinesimi çalıştırmaya yardım et: boşluğu dolduracak bir cümle yazın ve ben doğru seçeneği seçmeye çalışacağım.",
+  "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Aşağıdaki cümleyi dilbilgisi ve açıklığa göre kontrol et: '[cümle]'. Orijinal anlamını korurken daha okunabilir hale getirmek için yeniden yazın.",
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "En çok erteleme yaptığım durumlardan bahsederek başlayabilir misin ve sonra bunu aşmak için bazı öneriler verebilir misin?"
+}
