--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -643,7 +643,7 @@
   "Explain options trading": "解释一下期权交易",
   "if I'm familiar with buying and selling stocks": "如果我熟悉股票买卖的话",
   "Grammar check": "语法检查",
-  "rewrite it for better readability": "为了提高可读性而重写它",
+  "rewrite it for better readability ": "为了提高可读性而重写它",
   "Tell me a fun fact": "给我讲一个有趣的事实",
   "about the Roman Empire": "关于罗马帝国的",
   "Give me ideas": "给我出出主意",
@@ -651,5 +651,12 @@
   "Overcome procrastination": "克服拖延（的毛病）",
   "give me tips": "给我些建议",
   "Help me study": "帮我学习",
-  "vocabulary for a college entrance exam": "大学入学考试的词汇"
+  "vocabulary for a college entrance exam": "大学入学考试的词汇",
+  "Tell me a random fun fact about the Roman Empire": "给我讲一个关于罗马帝国的随机有趣的事实。",
+  "Explain options trading in simple terms if I'm familiar with buying and selling stocks.": "如果我熟悉股票买卖的话，用简单的术语给我解释一下期权交易。",
+  "What are 5 creative things I could do with my kids' art? I don't want to throw them away, but it's also so much clutter.": "我能用我孩子的艺术作品做哪五件有创意的事呢？我不想扔掉它们，但它们实在太杂乱了。",
+  "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "给我展示一段用 CSS 和 JavaScript 编写的网站粘性头部（固定头部）的代码片段。",
+  "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "帮我学习词汇：给我写一个填空题的句子，然后我会试着选出正确的选项。",
+  "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "检查以下句子的语法和清晰度：‘[句子]’。在保持原意的情况下，为提高可读性对其进行改写。",
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "你能不能先问问我拖延情况最严重的事例，然后给我一些克服拖延的建议呢？"
 }
