更新 dgc合约地址，添加国际化，添加金额提示语

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -659,6 +659,10 @@
   "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "",
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "",
-  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": ""
-
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "",
+  "I konw": "",
+  "About DGC": "",
+  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "",
+  "About DBC": "",
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": ""
 }
