--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -659,5 +659,10 @@
   "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "Muestrame un fragmento de código de un encabezado fijo de un sitio web en CSS y JavaScript.",
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Ayúdame a estudiar vocabulario: escribe una frase para que yo rellene el espacio en blanco y trataré de elegir la opción correcta.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Revisa la siguiente frase por gramática y claridad: '[frase]'. Reescríbela para una mejor legibilidad manteniendo su significado original.",
-  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "¿Podrías comenzar preguntándome sobre las ocasiones en las que más procrasino y luego darme algunos consejos para superarlo?"
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "¿Podrías comenzar preguntándome sobre las ocasiones en las que más procrasino y luego darme algunos consejos para superarlo?",
+  "I konw": "Yo sé",
+  "About DGC": "Acerca de DGC",
+  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Antes de lanzarse en la red principal de cualquier plataforma de trading, las fichas DGC se marcan como puntos. Estos puntos se convertirán en una proporción de 1:1 cuando DGC se lance oficialmente. El equipo de DGC se asegurará de que esta transición se realice sin problemas y evitará cualquier abuso de esta política.",
+  "About DBC": "Acerca de DBC",
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain es la primera cadena pública de IA del mundo. Su token nativo, DBC, se utiliza como tarifa de gas en este proyecto. Cualquier transacción DGC requiere una cierta cantidad de DBCs nominales."
 }
