--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -658,6 +658,10 @@
   "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "Montrez-moi un extrait de code d'un en-tête fixe d'un site web en CSS et JavaScript.",
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Aidez-moi à étudier le vocabulaire : écrivez une phrase pour que je remplit le blanc et je tâcherai de choisir la bonne option.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Vérifiez la phrase suivante pour la grammaire et la clarté : '[phrase]'. Réécrivez-la pour une meilleure lisibilité tout en conservant son sens original.",
-  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Pourriez-vous commencer par me demander des exemples de moments où je procrastine le plus puis me donner quelques conseils pour le surmonter?"
-
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Pourriez-vous commencer par me demander des exemples de moments où je procrastine le plus puis me donner quelques conseils pour le surmonter?",
+  "I konw": "Je sais",
+  "About DGC": "À propos de DGC",
+  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Avant le lancement sur le réseau principal de toute plateforme de trading, les jetons DGC sont marqués en points. Ces points seront convertis au ratio 1:1 lorsque DGC sera lancé officiellement. L'équipe DGC veillera à ce que cette transition se fasse en douceur et préviendra tout abus de cette politique.",
+  "About DBC": "À propos de DBC",
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain est la première chaîne publique d'IA au monde. Son jeton natif, DBC, est utilisé comme frais de gaz dans ce projet. Toutes les transactions DGC nécessitent une certaine quantité de DBC nominaux."
 }
