--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -659,5 +659,10 @@
   "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "CSS와 JavaScript로 작성된 웹사이트의 고정 헤더의 코드 조각을 보여주세요.",
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the the correct option.": "어휘 공부를 도와주세요. 빈칸을 채울 수 있는 문장을 써주세요. 그리고 제가 올바른 선택지를 골라보도록 하겠습니다.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "다음 문장의 문법과 명확성을 확인해주세요. '[문장]'. 원래의 의미를 유지하면서 더 읽기 쉽게 다시 쓰세요.",
-  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "제가 가장 늦추는 상황에 대해 묻고 나서 그것을 극복하기 위한 몇 가지 제안을 주실 수 있을까요?"
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "제가 가장 늦추는 상황에 대해 묻고 나서 그것을 극복하기 위한 몇 가지 제안을 주실 수 있을까요?",
+  "I konw": "나는 알고 있다",
+  "About DGC": "DGC에 관하여",
+  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "어떤 거래 플랫폼의 메인넷에 출시되기 전에, DGC 토큰은 포인트로 표시됩니다. DGC가 공식적으로 출시될 때, 이러한 포인트는 1:1 비율로 변환됩니다. DGC 팀은 이 전환이 원활하게 이루어지고 이 정책의 남용을 방지할 것입니다.",
+  "About DBC": "DBC에 관하여",
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "딥브레인체인은 세계 최초의 AI 공개 체인입니다. 그 자체 토큰인 DBC는 이 프로젝트에서 가스 요금으로 사용됩니다. 모든 DGC 거래는 일정량의 명목상의 DBC를 요구합니다."
 }
