--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -658,5 +658,10 @@
   "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "Покажите мне фрагмент кода фиксированного заголовка веб-сайта на CSS и JavaScript.",
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Помогите мне изучать лексику: напишите мне предложение для заполнения пропуска, и я постараюсь выбрать правильный вариант.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Проверьте следующее предложение на грамматику и ясность: '[предложение]'. Перепишите его для лучшей читаемости, сохраняя исходный смысл.",
-  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Можете ли вы начать, спросив меня о случаях, когда я наиболее откладываю выполнение дел, а затем дать мне несколько советов, чтобы преодолеть это?"
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Можете ли вы начать, спросив меня о случаях, когда я наиболее откладываю выполнение дел, а затем дать мне несколько советов, чтобы преодолеть это?",
+  "I konw": "Я знаю",
+  "About DGC": "О DGC",
+  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "До запуска на основной сети любой торговой платформы токены DGC помечаются как очки. Эти очки будут преобразованы в соотношении 1:1, когда DGC официально запустится. Команда DGC 确保这种转换顺利进行并防止对这项政策的任何滥用。",
+  "About DBC": "О DBC",
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain - это первая публичная цепь ИИ в мире. Его собственный токен, DBC, используется в качестве комиссии за газ в этом проекте. Любая транзакция DGC требует определенного количества номинальных DBC."
 }
