--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -658,5 +658,10 @@
   "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "แสดงชิ้นส่วนของโค้ดของหัวข้อแน่นของเว็บไซต์ใน CSS และ JavaScript ให้ฉันดู",
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "ช่วยฉันเรียนศัพท์ด้วยนะ: เขียนประโยคให้ฉันเติมคำว่าง แล้วฉันจะลองเลือกตัวเลือกที่ถูกต้อง",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "ตรวจสอบประโยคต่อไปนี้ด้วยไวยากรณ์และความชัดเจน: '[ประโยค]'. เขียนใหม่เพื่อให้อ่านง่ายขึ้นโดยยังคงความหมายเดิม",
-  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "คุณสามารถเริ่มด้วยการถามฉันเกี่ยวกับเหตุการณ์ที่ฉันล่าช้าได้มากที่สุด แล้วให้คำแนะนำให้ฉันเพื่อเอาชนะมันได้หรือไม่?"
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "คุณสามารถเริ่มด้วยการถามฉันเกี่ยวกับเหตุการณ์ที่ฉันล่าช้าได้มากที่สุด แล้วให้คำแนะนำให้ฉันเพื่อเอาชนะมันได้หรือไม่?",
+  "I konw": "ฉันรู้",
+  "About DGC": "เกี่ยวกับ DGC",
+  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "ก่อนการเปิดตัวบนโครงการหลักของแพลตฟอร์มการซื้อขายใด ๆ, โทเค็น DGC จะถูกกำหนดเป็นแต้ม. เหตุการณ์เหล่านี้จะถูกแปลงในอัตราส่วน 1:1 เมื่อ DGC เปิดตัวอย่างเป็นทางการ. ทีม DGC จะรับประกันว่าการเปลี่ยนแปลงนี้จะดำเนินต่อไปอย่างราบรื่นและป้องกันการประพฤติตัวอย่างไม่เหมาะสมของนโยบายนี้.",
+  "About DBC": "เกี่ยวกับ DBC",
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain เป็นโครงการประชาชน AI แรกในโลก. โทเค็นดั้งเดิมของมันคือ DBC ซึ่งถูกใช้เป็นค่าธรรมเนียมแก๊สในโครงการนี้. การทำธุรกรรม DGC ใด ๆ จะต้องมี DBC แบบมีชื่อเรียกจำนวนหนึ่ง."
 }
