--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -659,5 +659,10 @@
   "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "Bana bir web sitesinin CSS ve JavaScript ile yazılmış sabit başlığının bir kod parçacığını göster.",
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Kelime hazinesimi çalıştırmaya yardım et: boşluğu dolduracak bir cümle yazın ve ben doğru seçeneği seçmeye çalışacağım.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Aşağıdaki cümleyi dilbilgisi ve açıklığa göre kontrol et: '[cümle]'. Orijinal anlamını korurken daha okunabilir hale getirmek için yeniden yazın.",
-  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "En çok erteleme yaptığım durumlardan bahsederek başlayabilir misin ve sonra bunu aşmak için bazı öneriler verebilir misin?"
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "En çok erteleme yaptığım durumlardan bahsederek başlayabilir misin ve sonra bunu aşmak için bazı öneriler verebilir misin?",
+  "I konw": "Biliyorum",
+  "About DGC": "DGC Hakkında",
+  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Herhangi bir ticaret platformunun ana ağına (mainnet) başlamadan önce, DGC tokenleri puan olarak işaretlenir. DGC resmi olarak başladığında, bu puanlar 1:1 oranında dönüştürülür. DGC takımının bu geçişin sorunsuz geçtiğinden ve bu politikanın herhangi bir kötüye kullanımından emin olması gerekir.",
+  "About DBC": "DBC Hakkında",
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain, dünyanın ilk yapay zeka (AI) açık zinciridir. İlgili proje için, yerel tokenı olan DBC, gaz ücreti olarak kullanılır. Herhangi bir DGC işlemi belirli bir miktarda nominal DBC'ye ihtiyaç duyar."
 }
