--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -659,5 +659,10 @@
   "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "Hiển thị cho tôi một đoạn mã code của tiêu đề dính của một trang web trong CSS và JavaScript.",
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Giúp tôi học tập từ vựng: viết cho tôi một câu để điền vào chỗ trống, và tôi sẽ cố gắng chọn lựa chọn đúng.",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "Kiểm tra câu sau về ngữ pháp và độ rõ ràng: '[câu]'. Viết lại cho dễ đọc hơn trong khi vẫn giữ nguyên nghĩa của nó.",
-  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Bạn có thể bắt đầu bằng cách hỏi tôi về các trường hợp tôi trì hoãn nhiều nhất và sau đó cho tôi một số gợi ý để vượt qua nó không?"
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Bạn có thể bắt đầu bằng cách hỏi tôi về các trường hợp tôi trì hoãn nhiều nhất và sau đó cho tôi một số gợi ý để vượt qua nó không?",
+  "I konw": "Tôi biết",
+  "About DGC": "Về DGC",
+  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Trước khi được phát hành trên mạng chính của bất kỳ nền tảng giao dịch nào, các mã thông báo DGC được đánh dấu là điểm. Những điểm này sẽ được chuyển đổi theo tỷ lệ 1:1 khi DGC được chính thức phát hành. Đội ngũ DGC sẽ đảm bảo rằng quá trình chuyển đổi này diễn ra suôn sẻ và ngăn chặn mọi sự lạm dụng của chính sách này.",
+  "About DBC": "Về DBC",
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain là chuỗi công khai AI đầu tiên trên thế giới. Mã thông báo bản địa của nó, DBC, được sử dụng làm phí khí trong dự án này. Bất kỳ giao dịch DGC nào đều yêu cầu một lượng nhất định các DBC danh nghĩa."
 }
