--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -658,5 +658,10 @@
   "Show me a code snippet of a website's sticky header in CSS and JavaScript.": "给我展示一段用 CSS 和 JavaScript 编写的网站粘性头部（固定头部）的代码片段。",
   "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "帮我学习词汇：给我写一个填空题的句子，然后我会试着选出正确的选项。",
   "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning.": "检查以下句子的语法和清晰度：‘[句子]’。在保持原意的情况下，为提高可读性对其进行改写。",
-  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "你能不能先问问我拖延情况最严重的事例，然后给我一些克服拖延的建议呢？"
+  "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "你能不能先问问我拖延情况最严重的事例，然后给我一些克服拖延的建议呢？",
+  "I konw": "我知道",
+  "About DGC": "关于 DGC",
+  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "在任何交易平台的主网启动之前，DGC 代币被标记为积分。当 DGC 正式上线时，这些积分将按照 1:1 的比例进行转换。DGC 团队将确保这一转换过程顺利进行，并防止对这一政策的任何滥用。",
+  "About DBC": "关于 DBC",
+  "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "深脑链（DeepBrainChain）是世界上首个人工智能公链。其原生代币 DBC 在该项目中被用作燃气费（手续费）。任何 DGC 交易都需要一定数量的名义上的 DBC。"
 }
