--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -632,6 +632,13 @@
   "Name": "Name",
   "Clock In": "Eintragen",
   "Share": "Teilen",
+  "Valid until": "Gültig bis",
+  "Done": "Erledigt",
+  "Done...": "Erledigt...",
+  "You have received 100 DGC points，you can convert your points into cash": "Sie haben 100 DGC-Punkte erhalten und können Ihre Punkte in Bargeld umwandeln.",
+  "You have received 100 DGC points!": "Sie haben 100 DGC-Punkte erhalten!",
+  "Failed to received reward": "Es ist nicht möglich, die Belohnung zu erhalten.",
+  "You Rewards History not found": "Ihre Belohnungsgeschichte wurde nicht gefunden.",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
   "II. Referral Reward": "II. Empfehlungsbelohnung",
