--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -632,6 +632,13 @@
   "Name": "",
   "Clock In": "",
   "Share": "",
+  "Valid until": "",
+  "Done": "",
+  "Done...": "",
+  "You have received 100 DGC points，you can convert your points into cash": "",
+  "You have received 100 DGC points !": "",
+  "Failed to received reward": "",
+  "You Rewards History not found": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
