--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -631,6 +631,13 @@
   "Name": "Nom",
   "Clock In": "Battre la carte",
   "Share": "Partager",
+  "Valid until": "Valide jusqu'à",
+  "Done": "Fait",
+  "Done...": "Fait...",
+  "You have received 100 DGC points，you can convert your points into cash": "Vous avez reçu 100 points DGC, vous pouvez convertir vos points en espèces.",
+  "You have received 100 DGC points!": "Vous avez reçu 100 points DGC!",
+  "Failed to received reward": "Échec de la réception de la récompense",
+  "You Rewards History not found": "Aucune historique de vos récompenses n'a été trouvée.",
   "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Récompense pour la recommandation",
