--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -632,6 +632,13 @@
   "Use Initials": "イニシャルを使用",
   "name": "名前",
   "Name": "名前",
+  "Valid until": "有効期限まで",
+  "Done": "かんせい",
+  "Done...": "かんせい...",
+  "You have received 100 DGC points，you can convert your points into cash": "あなたは 100 の DGC ポイントを受け取りました。あなたはそのポイントを現金に換算できます。",
+  "You have received 100 DGC points!": "あなたは 100 の DGC ポイントを受け取りました！",
+  "Failed to received reward": "報酬を受け取ることができませんでした。",
+  "You Rewards History not found": "あなたの報酬履歴が見つかりません。",
   "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
   "II. Referral Reward": "II. 紹介報酬",
