--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -632,6 +632,13 @@
   "Name": "이름",
   "Clock In": "출근",
   "Share": "공유",
+  "Valid until": "유효기간까지",
+  "Done": "완료",
+  "Done...": "완료...",
+  "You have received 100 DGC points，you can convert your points into cash": "100개의 DGC 포인트를 받았으며, 포인트를 현금으로 환산할 수 있습니다.",
+  "You have received 100 DGC points!": "100개의 DGC 포인트를 받았습니다!",
+  "Failed to received reward": "보상 수령에 실패했습니다.",
+  "You Rewards History not found": "보상 기록이 발견되지 않습니다.",
   "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
   "II. Referral Reward": "II. 추천 보상",
