--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -631,6 +631,13 @@
   "Name": "Имя",
   "Clock In": "Войти на работу",
   "Share": "Поделиться",
+  "Valid until": "Действителен до",
+  "Done": "Выполнено",
+  "Done...": "Выполнено...",
+  "You have received 100 DGC points，you can convert your points into cash": "Вы получили 100 баллов DGC, вы можете конвертировать свои баллы в наличные.",
+  "You have received 100 DGC points!": "Вы получили 100 баллов DGC!",
+  "Failed to received reward": "Не удалось получить награду.",
+  "You Rewards History not found": "История ваших наград не найдена.",
   "I. New User Creation Reward": "I. Премия за создание нового пользователя",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "После завершения аутентификации нового пользователя получите премию в <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Премия за рекомендацию",
