--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -631,6 +631,13 @@
   "Name": "ชื่อ",
   "Clock In": "ลงเวลาเข้างาน",
   "Share": "แชร์",
+  "Valid until": "มีผลตั้งแต่ถึง",
+  "Done": "เสร็จแล้ว",
+  "Done...": "เสร็จแล้ว...",
+  "You have received 100 DGC points，you can convert your points into cash": "คุณได้รับแต้ม DGC 100 แต้ม คุณสามารถแปลงแต้มของคุณเป็นเงินสดได้",
+  "You have received 100 DGC points!": "คุณได้รับแต้ม DGC 100 แต้ม!",
+  "Failed to received reward": "ไม่สามารถรับรางวัลได้",
+  "You Rewards History not found": "ไม่พบประวัติการรับรางวัลของคุณ",
   "I. New User Creation Reward": "I. ค่าตอบแทนสำหรับการสร้างผู้ใช้ใหม่",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "หลังจากเสร็จสิ้นการยืนยันผู้ใช้ใหม่แล้ว รับค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC",
   "II. Referral Reward": "II. ค่าตอบแทนสำหรับการแนะนำ",
