--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -632,6 +632,13 @@
   "Name": "İsim",
   "Clock In": "Giriş Yap",
   "Share": "Paylaş",
+  "Valid until": "Geçerli olana kadar",
+  "Done": "Tamamlandı",
+  "Done...": "Tamamlandı...",
+  "You have received 100 DGC points，you can convert your points into cash": "100 DGC puanı aldınız, puanlarınızı nakit olarak dönüştürebilirsiniz.",
+  "You have received 100 DGC points!": "100 DGC puanı aldınız!",
+  "Failed to received reward": "Ödül alma işlemi başarısız oldu.",
+  "You Rewards History not found": "Ödül geçmişiniz bulunamadı.",
   "I. New User Creation Reward": "I. Yeni Kullanıcı Oluşturma Ödülü",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Yeni kullanıcı doğrulamasını tamamladıktan sonra, <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC ödülü alırsınız.",
   "II. Referral Reward": "II. Tavsiye Ödülü",
