--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -198,7 +198,7 @@
   "Enable New Sign Ups": "允许新用户注册",
   "Enabled": "已启用",
   "Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "确保你的 CSV 文件按照以下顺序包含 4 列：姓名、电子邮件、密码、角色。",
-  "Enter {{role}} message here": "在此处输入 {{角色}} 消息",
+  "Enter {{role}} message here": "在此处输入 {{role}} 消息",
   "Enter a detail about yourself for your LLMs to recall": "输入一个关于你自己的详细信息以便你的大型语言模型（LLMs）能回忆起",
   "Enter Address": "输入地址",
   "Enter Amount": "输入金额",
@@ -211,7 +211,7 @@
   "Enter LiteLLM API RPM (litellm_params.rpm)": "输入 LiteLLM API 每分钟请求数（litellm_params.rpm）",
   "Enter LiteLLM Model (litellm_params.model)": "输入 LiteLLM 模型（litellm_params.model）",
   "Enter Max Tokens (litellm_params.max_tokens)": "输入最大标记数（litellm_params.max_tokens）",
-  "Enter model tag (e.g. {{modelTag}})": "输入模型标签（例如 {{模型标签}}）",
+  "Enter model tag (e.g. {{modelTag}})": "输入模型标签（例如 {{modelTag}}）",
   "Enter Number of Steps (e.g. 50)": "输入步数（例如 50）",
   "Enter Password": "输入密码",
   "Enter Score": "输入分数",
@@ -392,7 +392,7 @@
   "PDF Extract Images (OCR)": "从 PDF 文档中提取图像（通过光学字符识别，OCR 技术）",
   "pending": "待定；未决；正在进行中",
   "per user, billed monthly": "按用户，每月计费",
-  "Permission denied when accessing microphone: {{error}}": "访问麦克风时权限被拒绝：{{错误信息}}",
+  "Permission denied when accessing microphone: {{error}}": "访问麦克风时权限被拒绝：{{error}}",
   "Personalization": "个性化",
   "Plain text (.txt)": "纯文本（.txt 格式）",
   "Playground": "操场；试验场；（在编程等领域可能指供测试、尝试新功能的区域，如代码试验场）",
@@ -556,7 +556,7 @@
   "Trouble accessing Ollama?": "访问 Ollama 有困难吗？",
   "TTS Settings": "文本到语音设置",
   "Type Hugging Face Resolve (Download) URL": "输入 Hugging Face Resolve（下载）网址",
-  "Uh-oh! There was an issue connecting to {{provider}}.": "哎呀！连接到 {{提供商}} 时出现了问题。",
+  "Uh-oh! There was an issue connecting to {{provider}}.": "哎呀！连接到 {{provider}} 时出现了问题。",
   "Unknown File Type {{file_type}}, but accepting and treating as plain text": "未知文件类型 {{file_type}}，但接受并当作纯文本来处理",
   "Unlimited messages, interactions and history": "无限的消息、交互和历史记录",
   "Unlock": "解锁",
@@ -631,6 +631,13 @@
   "Invalid keystore file": "无效的KeyStore文件",
   "Please input password": "请输入密码",
   "Incorrect password": "密码输入错误",
+  "Valid until": "有效期到",
+  "Done": "完成",
+  "Done...": "完成...",
+  "You have received 100 DGC points，you can convert your points into cash": "您已收到 100 个 DGC 积分，您可以将积分兑换成现金。",
+  "You have received 100 DGC points!": "您已收到 100 个 DGC 积分！",
+  "Failed to received reward": "未能领取奖励",
+  "You Rewards History not found": "未找到您的奖励记录",
   "I. New User Creation Reward": "I. 新用户创建奖励",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "完成新用户认证后，可获得一个<span style='color: rgba(184, 142, 86, 1);'>1000</span>个 DGC 的奖励。",
   "II. Referral Reward": "II. 推荐奖励",
