--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -632,6 +632,13 @@
   "Name": "Nombre",
   "Clock In": "Registrar la entrada",
   "Share": "Compartir",
+  "Valid until": "Válido hasta",
+  "Done": "Hecho",
+  "Done...": "Hecho...",
+  "You have received 100 DGC points，you can convert your points into cash": "Has recibido 100 puntos DGC, puedes convertir tus puntos en efectivo.",
+  "You have received 100 DGC points!": "Has recibido 100 puntos DGC!",
+  "Failed to received reward": "No se logró recibir la recompensa.",
+  "You Rewards History not found": "No se ha encontrado el historial de tus recompensas.",
   "I. New User Creation Reward": "I. Recompensa por la Creación de un Nuevo Usuario",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Después de completar la autenticación del nuevo usuario, recibe una recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Recomendación",
