--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -632,6 +632,13 @@
   "Name": "Nama",
   "Clock In": "Absen Masuk",
   "Share": "Bagikan",
+  "Valid until": "Berlaku sampai",
+  "Done": "Selesai",
+  "Done...": "Selesai...",
+  "You have received 100 DGC points，you can convert your points into cash": "Anda telah menerima 100 poin DGC, Anda dapat mengubah poin Anda menjadi uang tunai.",
+  "You have received 100 DGC points!": "Anda telah menerima 100 poin DGC!",
+  "Failed to received reward": "Gagal menerima hadiah.",
+  "You Rewards History not found": "Riwayat hadiah Anda tidak ditemukan.",
   "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Hadiah Rujukan",
