--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -632,6 +632,13 @@
   "Name": "Nome",
   "Clock In": "Registrar entrada",
   "Share": "Compartilhar",
+  "Valid until": "Válido até",
+  "Done": "완료",
+  "Done...": "완료...",
+  "You have received 100 DGC points，you can convert your points into cash": "100개의 DGC 포인트를 받았으며, 포인트를 현금으로 환산할 수 있습니다.",
+  "You have received 100 DGC points!": "100개의 DGC 포인트를 받았습니다!",
+  "Failed to received reward": "보상 수령에 실패했습니다.",
+  "You Rewards History not found": "보상 기록이 발견되지 않습니다.",
   "I. New User Creation Reward": "I. Recompensa por Criação de Novo Usuário",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Após completar a autenticação do novo usuário, receba uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Indicação",
