--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -632,6 +632,13 @@
   "Name": "Tên",
   "Clock In": "Điểm danh",
   "Share": "Chia sẻ",
+  "Valid until": "Hiệu lực cho đến",
+  "Done": "Đã hoàn thành",
+  "Done...": "Đã hoàn thành...",
+  "You have received 100 DGC points，you can convert your points into cash": "Bạn đã nhận được 100 điểm DGC, bạn có thể chuyển đổi điểm của mình thành tiền mặt.",
+  "You have received 100 DGC points!": "Bạn đã nhận được 100 điểm DGC!",
+  "Failed to received reward": "Không thể nhận thưởng được.",
+  "You Rewards History not found": "Lịch sử thưởng của bạn không được tìm thấy.",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
